--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#00E8B2"
+    android:background="@color/red"
     android:elevation="4dp"
     app:title=""
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
