--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cfd8dc"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
 
-    <EditText
-        android:id="@+id/etNumber"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/toolbar"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#81c784"
-        android:cursorVisible="false"
-        android:padding="5dp"
-        android:textAlignment="textEnd"
-        android:textSize="25dp" />
+        android:layout_height="match_parent"
+        android:background="#262626"
+        tools:context=".MainActivity">
 
+        <Button
+            android:id="@+id/manual"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_toLeftOf="@+id/info"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/manual"/>
 
-    <TextView
-        android:id="@+id/TVResult"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/etNumber"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#81c784"
-        android:textAlignment="textEnd"
-        android:textColor="@android:color/black"
-        android:textSize="25dp" />
+        <Button
+            android:id="@+id/info"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_toLeftOf="@id/cronology"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/info"
+        />
 
-    <it.ticandtac.primecalculator.MyKeyboard
-        android:id="@+id/keyboard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
-        android:orientation="vertical" />
+        <Switch
+            android:id="@+id/sound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/etNumber"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="4dp"
+            android:layout_toLeftOf="@id/manual"
+            android:layout_marginTop="4dp"
+            android:textOff="Suono Of"
+            android:textOn="Suono On"
+            android:theme="@style/SwitchTheme"
+        />
 
-    <NumberPicker
-        android:id="@+id/functions_"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/chooseFunc"
-        android:descendantFocusability="blocksDescendants"
-        android:layout_marginTop="5dp"
+        <Button
+            android:id="@+id/cronology"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="6dp"
+            android:background="@drawable/crono"
+        />
 
-        android:background="#cfd8dc">
-    </NumberPicker>
+        <EditText
+            android:id="@+id/etNumber"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/cronology"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="6dp"
+            android:background="#363636"
+            android:cursorVisible="false"
+            android:padding="5dp"
+            android:textColor="@color/yellow"
+            android:textAlignment="textEnd"
+            android:textSize="25dp"
+        />
 
-    <TextView
-        android:id="@+id/chooseFunc"
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/TVResult"
-        android:text="SCEGLI LA FUNZIONE:"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"/>
+        <TextView
+            android:id="@+id/TVResult"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/etNumber"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:background="#363636"
+            android:textAlignment="textEnd"
+            android:textColor="@color/yellow"
+            android:textSize="25dp"
+        />
 
+        <it.ticandtac.primecalculator.MyKeyboard
+            android:id="@+id/keyboard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="1dp"
+            android:orientation="vertical"
+        />
+
+        <NumberPicker
+            android:id="@+id/functions_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/chooseFunc"
+            android:descendantFocusability="blocksDescendants"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="1dp"
+            android:background="#262626"
+            android:theme="@style/AppTheme.Picker">
+        </NumberPicker>
+
+        <TextView
+            android:id="@+id/chooseFunc"
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/TVResult"
+            android:text="SCEGLI LA FUNZIONE:"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+        />
 
 </RelativeLayout>
+
+
+    
+
+</android.support.v4.widget.DrawerLayout>
