--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="red">#ff0000</color>
-    <color name="green">#00FF00</color>
+    <color name="yellow">#FEF700</color>
+    <color name="darkG">#363636</color>
+
+
 </resources>
