--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,8 @@
             android:layout_marginBottom="4dp"
             android:layout_toLeftOf="@id/manual"
             android:layout_marginTop="4dp"
-            android:textOff="Suono Of"
-            android:textOn="Suono On"
+            android:textOff="Off"
+            android:textOn="On"
             android:theme="@style/SwitchTheme"
         />
 
