--- a/app/src/main/res/layout/keyboard.xml
+++ b/app/src/main/res/layout/keyboard.xml
@@ -15,7 +15,7 @@
             android:text="7"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+           />
 
         <Button
             android:id="@+id/button_8"
@@ -26,7 +26,7 @@
             android:text="8"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+            />
 
         <Button
             android:id="@+id/button_9"
@@ -37,7 +37,7 @@
             android:text="9"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+            />
 
         <Button
             android:id="@+id/button_delete"
@@ -48,7 +48,7 @@
             android:text="DEL"
             android:background="#FEF700"
             android:textColor="@color/darkG"
-            android:layout_margin="1dp"/>
+            />
 
 
 
@@ -60,7 +60,7 @@
             android:text="4"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+            />
 
         <Button
             android:id="@+id/button_5"
@@ -71,7 +71,7 @@
             android:text="5"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+            />
 
         <Button
             android:id="@+id/button_6"
@@ -82,7 +82,7 @@
             android:text="6"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+            />
 
         <Button
             android:id="@+id/button_AC"
@@ -93,7 +93,7 @@
             android:text="AC"
             android:background="#FEF700"
             android:textColor="@color/darkG"
-            android:layout_margin="1dp"/>
+            />
 
 
         <Button
@@ -103,8 +103,7 @@
             android:layout_above="@id/button_0"
             android:text="1"
             android:background="#363636"
-            android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+            android:textColor="@color/yellow"/>
 
         <Button
             android:id="@+id/button_2"
@@ -114,8 +113,7 @@
             android:layout_above="@id/button_enter"
             android:text="2"
             android:background="#363636"
-            android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+            android:textColor="@color/yellow" />
 
         <Button
             android:id="@+id/button_3"
@@ -126,7 +124,7 @@
             android:text="3"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"/>
+        />
 
         <Button
             android:id="@+id/button_off"
@@ -137,7 +135,7 @@
             android:layout_toEndOf="@id/button_3"
             android:background="#FEF700"
             android:textColor="@color/darkG"
-            android:layout_margin="1dp"/>
+           />
 
 
         <Button
@@ -148,7 +146,6 @@
             android:text="0"
             android:background="#363636"
             android:textColor="@color/yellow"
-            android:layout_margin="1dp"
             />
 
 
@@ -161,7 +158,7 @@
             android:background="#FEF700"
             android:textColor="@color/darkG"
             android:layout_alignParentBottom="true"
-            android:layout_margin="1dp"
+
             />
 
 
