--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
             android:layout_marginTop="4dp"
             android:textOff="Off"
             android:textOn="On"
+            android:thumb="@drawable/ic_music_note_"
             android:theme="@style/SwitchTheme"
         />
 
