--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="#262626">
+    android:background="#363636">
 
 
     <Button
         android:id="@+id/info"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="15dp"
@@ -20,9 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/etNumber"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="4dp"
         android:layout_toLeftOf="@id/info"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="10dp"
         android:thumb="@drawable/ic_music_note_"
         android:theme="@style/SwitchTheme"
         />
@@ -34,9 +33,9 @@
         android:layout_height="50dp"
         android:layout_below="@id/info"
         android:layout_marginLeft="6dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="2dp"
         android:layout_marginRight="6dp"
-        android:background="#363636"
+        android:background= "#4D4D4D"
         android:cursorVisible="false"
         android:padding="5dp"
         android:textColor="@color/yellow"
@@ -51,7 +50,7 @@
         android:layout_below="@+id/etNumber"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
-        android:background="#363636"
+        android:background="#4D4D4D"
         android:textAlignment="textEnd"
         android:textColor="@color/yellow"
         android:textSize="25dp"
@@ -61,7 +60,7 @@
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="3dp"
         android:orientation="vertical"
         />
 
@@ -74,7 +73,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
-        android:background="#262626"
+        android:background="#363636"
         android:theme="@style/AppTheme.Picker">
     </NumberPicker>
 
