--- a/app/src/main/res/layout/keyboard.xml
+++ b/app/src/main/res/layout/keyboard.xml
@@ -13,8 +13,9 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/button_4"
             android:text="7"
-            android:background="@drawable/buttonshape"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
            />
 
         <Button
@@ -24,8 +25,9 @@
             android:layout_toEndOf="@id/button_7"
             android:layout_above="@id/button_5"
             android:text="8"
-            android:background="#363636"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
             />
 
         <Button
@@ -35,8 +37,9 @@
             android:layout_toEndOf="@id/button_8"
             android:layout_above="@id/button_6"
             android:text="9"
-            android:background="#363636"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
             />
 
         <Button
@@ -46,8 +49,9 @@
             android:layout_toEndOf="@id/button_9"
             android:layout_above="@id/button_AC"
             android:text="DEL"
-            android:background="#FEF700"
+            android:background="@drawable/buttonshape_y"
             android:textColor="@color/darkG"
+            android:layout_margin="1dp"
             />
 
 
@@ -58,8 +62,9 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/button_1"
             android:text="4"
-            android:background="#363636"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
             />
 
         <Button
@@ -69,8 +74,9 @@
             android:layout_above="@id/button_2"
             android:layout_toEndOf="@id/button_4"
             android:text="5"
-            android:background="#363636"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
             />
 
         <Button
@@ -80,8 +86,9 @@
             android:layout_above="@id/button_3"
             android:layout_toEndOf="@id/button_5"
             android:text="6"
-            android:background="#363636"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
             />
 
         <Button
@@ -91,8 +98,9 @@
             android:layout_toEndOf="@id/button_6"
             android:layout_above="@id/button_off"
             android:text="AC"
-            android:background="#FEF700"
+            android:background="@drawable/buttonshape_y"
             android:textColor="@color/darkG"
+            android:layout_margin="1dp"
             />
 
 
@@ -102,8 +110,10 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/button_0"
             android:text="1"
-            android:background="#363636"
-            android:textColor="@color/yellow"/>
+            android:background="@drawable/buttonshape_d"
+            android:textColor="@color/yellow"
+            android:layout_margin="1dp"/>
+
 
         <Button
             android:id="@+id/button_2"
@@ -112,8 +122,9 @@
             android:layout_toEndOf="@id/button_1"
             android:layout_above="@id/button_enter"
             android:text="2"
-            android:background="#363636"
-            android:textColor="@color/yellow" />
+            android:background="@drawable/buttonshape_d"
+            android:textColor="@color/yellow"
+            android:layout_margin="1dp"/>
 
         <Button
             android:id="@+id/button_3"
@@ -122,8 +133,9 @@
             android:layout_toEndOf="@id/button_2"
             android:layout_above="@id/button_enter"
             android:text="3"
-            android:background="#363636"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
         />
 
         <Button
@@ -133,8 +145,9 @@
             android:text="OFF"
             android:layout_above="@id/button_enter"
             android:layout_toEndOf="@id/button_3"
-            android:background="#FEF700"
+            android:background="@drawable/buttonshape_y"
             android:textColor="@color/darkG"
+            android:layout_margin="1dp"
            />
 
 
@@ -144,8 +157,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:text="0"
-            android:background="#363636"
+            android:background="@drawable/buttonshape_d"
             android:textColor="@color/yellow"
+            android:layout_margin="1dp"
             />
 
 
@@ -155,10 +169,10 @@
             android:layout_height="wrap_content"
             android:text="Enter"
             android:layout_toEndOf="@id/button_0"
-            android:background="#FEF700"
+            android:background="@drawable/buttonshape_y"
             android:textColor="@color/darkG"
             android:layout_alignParentBottom="true"
-
+            android:layout_margin="1dp"
             />
 
 
