--- a/app/src/main/res/layout/fragment_crono.xml
+++ b/app/src/main/res/layout/fragment_crono.xml
@@ -1,5 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@color/darkG">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listCrono"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/cleanCrono"
+        android:layout_marginBottom="2dp"
+
+        />
+    <Button
+        android:id="@+id/cleanCrono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="10dp"
+        android:text="PULISCI LA CRONOLOGIA"
+        android:textColor="@color/yellow"
+        android:background="@drawable/buttonshape_d"/>
+
+
 
 </RelativeLayout>
