--- a/app/src/main/res/layout/fragment_manual.xml
+++ b/app/src/main/res/layout/fragment_manual.xml
@@ -1,5 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@color/darkG">
+
+    <TextView
+        android:id="@+id/titleMan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/yellow"
+        android:textSize="30dp"
+        android:text="Manuale d'uso"
+        android:textAllCaps="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="6dp"/>
+
+    <Button
+        android:id="@+id/button_func_man"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Funzione"
+        android:background="@drawable/buttonshape_r"
+        android:textColor="@color/darkG"
+        android:layout_below="@id/titleMan"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/button_func_man"
+        android:layout_below="@id/titleMan"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        android:textColor="@color/yellow"
+        android:text="Bottone per sapere cosa fa una funzione"/>
 
 </RelativeLayout>
