--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -8,7 +8,8 @@
         android:id="@+id/info"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@id/sound"
+        android:layout_below="@id/TVResult"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/info"
@@ -18,10 +19,10 @@
         android:id="@+id/sound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/view2"
-        android:layout_marginEnd="15dp"
-        android:layout_toLeftOf="@id/info"
-        android:layout_marginTop="10dp"
+        android:layout_below="@id/TVResult"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
         android:thumb="@drawable/ic_music_note_"
         android:theme="@style/SwitchTheme"
         />
@@ -33,13 +34,12 @@
         android:layout_height="50dp"
         android:layout_below="@id/view2"
         android:layout_toEndOf="@+id/view1"
-        android:background= "#8FB199"
+        android:background= "#CEC367"
         android:cursorVisible="false"
         android:layout_toStartOf="@id/view4"
-
-        android:textColor="@color/yellow"
+        android:textColor="@color/darkG"
         android:textAlignment="textEnd"
-        android:textSize="25dp"
+        android:textSize="20dp"
         />
 
     <TextView
@@ -47,12 +47,12 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@+id/etNumber"
-        android:background="#8FB199"
+        android:background="#CEC367"
         android:layout_toEndOf="@+id/view1"
         android:textAlignment="textEnd"
-        android:textColor="@color/yellow"
+        android:textColor="@color/darkG"
         android:layout_toStartOf="@id/view4"
-        android:textSize="25dp"
+        android:textSize="20dp"
         />
 
     <View
@@ -60,10 +60,10 @@
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:background="@drawable/grad_screen_dark2"
-        android:layout_below="@id/info"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="7dp"
         android:layout_marginEnd="7dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="7dp"
 
         />
     <View
@@ -86,7 +86,6 @@
         android:background="@drawable/grad_screen_w2"
         android:layout_below="@+id/view2"
         android:layout_above="@id/view3"
-
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="7dp"
         />
@@ -127,7 +126,7 @@
         android:layout_width="match_parent"
         android:layout_marginTop="15dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/TVResult"
+        android:layout_below="@id/info"
         android:text="SCEGLI LA FUNZIONE:"
         android:textAlignment="center"
         android:textColor="@color/yellow"
