--- a/app/src/main/res/layout/fragment_function.xml
+++ b/app/src/main/res/layout/fragment_function.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:textAlignment="center"
-        android:textSize="50dp"
+        android:textSize="30dp"
         android:textColor="@color/yellow"
 
         />
@@ -19,5 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/Title"
-        android:textColor="@color/yellow"/>
+        android:textSize="15dp"
+        android:textColor="@color/yellow"
+        android:padding="10dp"/>
 </RelativeLayout>
