--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,10 @@
     </style>
 
     <style name="SwitchTheme" parent="Theme.AppCompat.Light">
-        <item name="android:colorControlActivated">#FEF700</item>
+        <item name="android:colorControlActivated">#3498A0</item>
 
     </style>
     <style name="AppTheme.Picker" parent="Theme.AppCompat.Light.NoActionBar" >
-        <item name="android:textColorPrimary">@color/yellow</item>
+        <item name="android:textColorPrimary">@color/blueSky</item>
     </style>
 </resources>
