--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:thumb="@drawable/ic_music_note_"
+        android:thumb="@drawable/ic_music_note"
         android:theme="@style/SwitchTheme"
         />
 
@@ -33,26 +33,28 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/view2"
-        android:layout_toEndOf="@+id/view1"
-        android:background= "#CEC367"
-        android:cursorVisible="false"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="0dp"
         android:layout_toStartOf="@id/view4"
-        android:textColor="@color/darkG"
+        android:layout_toEndOf="@+id/view1"
+        android:background="#99CDCC"
+        android:cursorVisible="false"
         android:textAlignment="textEnd"
-        android:textSize="20dp"
-        />
+        android:textColor="@color/darkG"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/TVResult"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@+id/etNumber"
-        android:background="#CEC367"
+        android:background="#99CDCC"
         android:layout_toEndOf="@+id/view1"
         android:textAlignment="textEnd"
         android:textColor="@color/darkG"
         android:layout_toStartOf="@id/view4"
-        android:textSize="20dp"
+        android:textSize="20sp"
         />
 
     <View
@@ -103,7 +105,7 @@
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical"
         android:layout_below="@id/functions_"
         />
@@ -127,8 +129,9 @@
         android:layout_marginTop="15dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/info"
-        android:text="SCEGLI LA FUNZIONE:"
+        android:text="@string/ChooseFunc"
         android:textAlignment="center"
-        android:textColor="@color/yellow"
+        android:textColor="#D62636"
+
         />
 </RelativeLayout>
