--- a/app/src/main/res/layout/fragment_crono.xml
+++ b/app/src/main/res/layout/fragment_crono.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/darkG">
+    android:background="#363636">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listCrono"
@@ -18,9 +18,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="10dp"
-        android:text="PULISCI LA CRONOLOGIA"
-        android:textColor="@color/yellow"
-        android:background="@drawable/buttonshape_d"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/CleanCrono"
+        android:textColor="@color/darkG"
+        android:background="@drawable/buttonshape_r"/>
 
 
 
