--- a/app/src/main/res/layout/recycler_content.xml
+++ b/app/src/main/res/layout/recycler_content.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkG"
+    android:background="#363636"
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
@@ -12,7 +12,7 @@
         android:id="@+id/func_"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/yellow"
+        android:textColor="#D62636"
         android:layout_marginTop="8dp"
         android:layout_alignParentTop="true"
         android:textSize="16dp" />
@@ -21,7 +21,7 @@
         android:id="@+id/res_"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/yellow"
+        android:textColor="@color/blueSky"
         android:layout_below="@+id/func_"
         android:textSize="16dp" />
 
