--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="red">#ff0000</color>
-    <color name="yellow">#FEF700</color>
+    <color name="blueSky">#3498A0</color>
     <color name="darkG">#262626</color>
 
 
