--- a/app/src/main/res/drawable/buttonshape_r_2.xml
+++ b/app/src/main/res/drawable/buttonshape_r_2.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        android:radius="14dp"
         />
     <gradient
         android:angle="270"
         android:centerX="0%"
-        android:centerColor="#2B797F"
+        android:centerColor="#D62636"
         android:startColor="#E8E8E8"
-        android:endColor="#042B48"
+        android:endColor="#3D0000"
         android:type="linear"
         />
     <padding
