--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -34,7 +34,6 @@
         android:layout_height="50dp"
         android:layout_below="@id/view2"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="0dp"
         android:layout_toStartOf="@id/view4"
         android:layout_toEndOf="@+id/view1"
@@ -101,7 +100,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="7dp"/>
 
-    <it.ticandtac.primecalculator.MyKeyboard
+    <it.ticandtac.primecalculator.MyViews.MyKeyboard
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
