--- a/app/src/main/res/layout/fragment_crono.xml
+++ b/app/src/main/res/layout/fragment_crono.xml
@@ -22,7 +22,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/CleanCrono"
         android:textColor="@color/darkG"
-        android:background="@drawable/buttonshape_r"/>
+        android:background="@drawable/buttonshape_r_2"/>
 
 
 
