--- a/app/src/main/res/layout/fragment_function.xml
+++ b/app/src/main/res/layout/fragment_function.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/darkG">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFF">
 
     <TextView
         android:id="@+id/Title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:textAlignment="center"
-        android:textSize="35sp"
+        android:textSize="25sp"
+        android:layout_centerHorizontal="true"
         android:textColor="#D62636"
-
+        android:layout_margin="10dp"
+        android:background="@drawable/border"
         />
 
     <TextView
         android:id="@+id/Description"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/Title"
-        android:textSize="25sp"
-        android:textColor="@color/blueSky"
+        android:textSize="15sp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/darkG"
         android:padding="10dp"/>
 </RelativeLayout>
