--- a/app/src/main/res/layout/recycler_content.xml
+++ b/app/src/main/res/layout/recycler_content.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#363636"
+    android:background="@drawable/border_res_content"
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/func_"
