--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="red">#ff0000</color>
+    <color name="red">#D62636</color>
     <color name="blueSky">#3498A0</color>
     <color name="darkG">#262626</color>
     <color name="dotColor">#181D83</color>
